--- a/code/eda_shark_depth.Rmd
+++ b/code/eda_shark_depth.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Exploratory data analysis - temperature and depth"
-aauthor: "Ben Cresswell"
+title: "Exploratory data analysis - shark depth"
+author: "Ben Cresswell"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: 
  html_document:
@@ -19,24 +19,15 @@ editor_options:
 ---
 
 
-```{r setup, include=FALSE}
+```{r include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-```
-
-# Load required packages
-```{r packages, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
-library(patchwork)
-library(tidyverse)
-```
-
-# Housekeeping
-```{r warning=FALSE}
+source("packages.R")
 #rm(list=ls()) # Clear out environment if necessary
 ```
 
 # Load shark T/P data
 ```{r}
-#load(file = "../data/Rdata/shark_tp_data.Rdata")
+load(file = "../data/Rdata/shark_tp_data.Rdata")
 shark_tp_data
 ```
 
@@ -71,6 +62,7 @@ shark_tp_data %>%
   scale_y_reverse() +
   facet_wrap(~ station_name)
 ```
+Some receiver stations failed early in the deployment period
 
 # Shark depth - daily summary
 ```{r}
@@ -84,15 +76,13 @@ shark_daily_depths <-
             daily_min_depth = min(Depth),
             daily_mean_depth = mean(Depth)) %>% 
   mutate(daily_min_depth = if_else(daily_min_depth <0, 0, daily_min_depth))
-
-save(shark_daily_depths, file = "../data/Rdata/shark_daily_depths.Rdata")
+shark_daily_depths
+#save(shark_daily_depths, file = "../data/Rdata/shark_daily_depths.Rdata")
 ```
 
-
-
-## Plot
+## Plot daily depths
 ```{r}
-depth_plot <- 
+shark_daily_depth_plot <- 
 shark_daily_depths %>%   
   ggplot() +
   geom_line(aes(x = date, y = daily_min_depth), colour = "skyblue") +
@@ -102,7 +92,7 @@ shark_daily_depths %>%
   geom_line(aes(x = date, y = daily_max_depth), colour = "midnightblue") +
   geom_smooth(aes(x = date, y = daily_max_depth), colour = "midnightblue",  method = "gam", formula = y ~ s(x, bs = 'cs'), level = 0.95) +
   #geom_smooth(aes(x = date, y = daily_max_depth), colour = "red") + # Basic smooth, rather than gam
-  theme_gray() +
+  theme_minimal() +
   scale_y_reverse() +
   #scale_x_date(date_breaks = "1 months", date_labels = '%Y-%m') +
   #theme(axis.text.x = element_text(angle = 45)) +
@@ -112,170 +102,39 @@ shark_daily_depths %>%
   #xlab("Date") +
   ylab("Depth \n (m below sealevel)")
 
-depth_plot
+shark_daily_depth_plot
 ```
 
-
-
-
-# Depth - weekly values
+# Weekly summary
 ```{r}
+shark_weekly_depths <- 
 shark_tp_data %>% 
-  mutate(date = date(detection_timestamp),
-         year_week = as.double(str_c(str_sub(isoyear(date), 1, 4),  ".", formatC(isoweek(date), format = "f", digits = 0, width = 2, flag = "0")))) %>% 
-  #mutate(year_week = as.double(year_week)) %>% 
+  mutate(week_date = date(floor_date(detection_timestamp, "week"))) %>% 
   filter(!is.na(Depth)) %>% 
-  group_by(year_week) %>% 
+  group_by(week_date) %>% 
   summarise(weekly_max_depth = max(Depth),
             weekly_min_depth = min(Depth),
             weekly_mean_depth = mean(Depth)) %>% 
   mutate(weekly_min_depth = if_else(weekly_min_depth <0, 0, weekly_min_depth))
-
+shark_weekly_depths
 ```
 
-
-
-
-
-
-
-
-
-
-
-
-
+## Plot weekly depths
 ```{r}
-shark_tp_data %>% 
-  mutate(date = date(detection_timestamp),
-         year_week = as.double(str_c(str_sub(isoyear(date), 1, 4),  ".", formatC(isoweek(date), format = "f", digits = 0, width = 2, flag = "0")))) %>% 
-  #mutate(year_week = as.double(year_week)) %>% 
-  filter(!is.na(Depth)) %>% 
-  group_by(year_week) %>% 
-  summarise(weekly_max_depth = max(Depth),
-            weekly_min_depth = min(Depth),
-            weekly_mean_depth = mean(Depth)) %>% 
-  mutate(weekly_min_depth = if_else(weekly_min_depth <0, 0, weekly_min_depth)) %>% 
+shark_weekly_depth_plot <- 
+shark_weekly_depths %>% 
   ggplot() +
-  geom_point(aes(x = year_week, y = weekly_min_depth), colour = "blue") +
-  geom_point(aes(x = year_week, y = weekly_mean_depth), colour = "grey30") +
-  geom_point(aes(x = year_week, y = weekly_max_depth), colour = "red") +
-  geom_line(aes(x = year_week, y = weekly_max_depth), colour = "red") +
-  geom_smooth(aes(x = year_week, y = weekly_max_depth)) +
-  scale_y_reverse() 
+  geom_line(aes(x = week_date, y = weekly_min_depth), colour = "blue") +
+  geom_line(aes(x = week_date, y = weekly_mean_depth), colour = "grey30") +
+  geom_smooth(aes(x = week_date, y = weekly_mean_depth), colour = "grey30", method = "gam", formula = y ~ s(x, bs = 'cs'), level = 0.95) +
+  geom_line(aes(x = week_date, y = weekly_max_depth), colour = "red") +
+  geom_smooth(aes(x = week_date, y = weekly_max_depth), colour = "red", method = "gam", formula = y ~ s(x, bs = 'cs'), level = 0.95) +
+  scale_y_reverse() +
+  theme_minimal() +
+  xlab("Date") +
+  ylab("Averaged weekly depths \n (m below sealevel)")
+shark_weekly_depth_plot
 ```
-
-
-```{r}
-daymax_dep_plot <- 
-shark_tp_data %>% 
-  mutate(date = date(detection_timestamp)) %>% 
-  filter(!is.na(Depth)) %>% 
-  group_by(date) %>% 
-  summarise(daily_max_depth = max(Depth),
-            daily_min_depth = min(Depth),
-            daily_mean_depth = mean(Depth)) %>% 
-  ungroup() %>% 
-  ggplot() +
-  geom_point(aes(x = date, y = daily_max_depth)) +
-  #geom_point(aes(x = date, y = roll_mean), data = SST_comb3, colour = "blue") +
-  #geom_line(aes(x = date, y = roll_mean), data = SST_comb3, colour = "blue") 
-  #geom_smooth(aes(x = date, y = max_depth)) +
-  scale_y_reverse() 
-```
-
-
-```{r}
-daymax_dep_plot/SST_plot
-```
-
-
-# Depth - by receiver location
-```{r}
-shark_tp_data %>% 
-  #filter(station_name_long == 'Lagoon_2')# %>% # Just looking at Silver City for now as it is the only one with observations for the whole period
-  ggplot() +
-  geom_point(aes(x = detection_timestamp, y = Depth)) +
-  scale_y_reverse()  +
-  facet_wrap(~station_name)
-```
-
-
-
-
-
-
-
-Same with depth - pattern replicated by most individuals. 
-Interesting to look at #14049 who didn't make as many deep moves and whose overall temperatures look higher than the others.
-
-# Tease out max depths per day/week
-```{r}
-shark_dailydep <- 
-shark_tp_data %>% 
-  mutate(date = as_date(detection_timestamp)) %>% 
-  group_by(date, station_name_long) %>% 
-  filter(!is.na(Depth)) %>% 
-  summarise(daily_max_depth = max(Depth))
-
-shark_weeklydep <- 
-shark_dailydep %>% 
-  mutate(week = week(date),
-         year = year(date)) %>% 
-  mutate(year_week = paste(year, week)) %>% 
-  group_by(year_week, station_name_long) %>% 
-  summarise(weekly_max_depth = max(daily_max_depth)) #%>% 
-  arrange(year)
-```
-
-# And plot
-```{r}
-shark_dailydep %>% 
-  filter(station_name_long == 'Silver_City') %>% # Just looking at Silver City for now as it is the only one with observations for the whole period
-  ggplot() +
-  geom_point(aes(x = date, y = daily_max_depth)) +
-  scale_y_reverse() 
- # facet_wrap(~transmitter_id)
-
-shark_weeklydep %>% 
-  filter(station_name_long == 'Silver_City') %>% # Just looking at Silver City for now as it is the only one with observations for the whole period
-  ggplot() +
-  geom_point(aes(x = year_week, y = weekly_max_depth)) +
-  scale_y_reverse() 
- # facet_wrap(~transmitter_id)
-```
-
-
-```{r}
-diurnal_sharks <- 
-  shark_tp_data %>% 
-  mutate(hour = hour(detection_timestamp)) %>% 
-  mutate(tod = case_when(hour %in% (6:18) ~ "Day",
-                         TRUE ~ "Night"))
-```
-
-
-
-```{r}
-diurnal_sharks %>% 
-  ggplot() +
-    geom_point(aes(x = detection_timestamp, y = Depth)) +
-    scale_y_reverse() +
-    facet_wrap(~tod)
-```
-
-
-```{r}
-diurnal_sharks %>% 
-  ggplot() +
-  geom_point(aes(x = detection_timestamp, y = Temp)) +
-  geom_point(aes(x = time, y = temp), data = SSTcomb, colour = "blue") +
-  facet_wrap(~tod)
-```
-
-
-
-
 
 
 
